--- a/fabric/test/project/build.gradle
+++ b/fabric/test/project/build.gradle
@@ -1,9 +1,3 @@
-buildscript {
-    repositories {
-        maven {url = "https://maven.fabricmc.net"}
-    }
-}
-
 plugins {
     id("wheel-fabric").version("latest.integration")
 }
@@ -13,19 +7,20 @@ if (!plugins.hasPlugin("wheel-fabric")) {
 }
 
 allprojects {
+    plugins.apply("wheel-fabric")
+
+    group = "net.auoeke"
+    version = "1.2.5"
+
     afterEvaluate {
         tasks.publish.enabled = false
     }
-}
-
-allprojects {
-    group = "net.auoeke"
-    version = "1.2.5"
 
     wheel {
         nospam = false
         publish = false
         channel = "latest"
+        genSources = null
 
         java {
             target = 8
@@ -38,6 +33,7 @@ repositories {
 }
 
 dependencies {
+/*
     mod("arrp")
     modInclude("api-screen-handler")
     modInclude("api-screen")
@@ -46,4 +42,5 @@ dependencies {
     mod("cf:modmenu-308702:3348711")
     mod("jitpack:Tuinity/Starlight:1.0.0-RC2")
     // mod("better-slabs")
+*/
 }
